chore: remove unused auth callback websocket
